--- a/main/templates/pnr.html
+++ b/main/templates/pnr.html
@@ -7,23 +7,24 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-</head>
 
 <body>
-    <h1>Add Two numbers</h1>
-
+    <h1>Calculate Simple Interest</h1>
+    <hr>
     <form method="post">
         {% csrf_token %}
-        <label for="num1">Number 1:</label>
-        <input type="text" name="num1" id="num1" required /><br /><br />
-        <label for="num2">Number 2:</label>
-        <input type="text" name="num2" id="num2" required /><br /><br />
-        <!--  <input type="submit" value="Calculate" /> -->
+        <label for="p">Principal Amount:</label>
+        <input type="text" name="p" id="p" required /><br /><br />
+        <label for="n">Number of Years:</label>
+        <input type="text" name="n" id="n" required /><br /><br />
+        <label for="r">Rate of interest:</label>
+        <input type="text" name="r" id="r" required /><br /><br />
+        <!--<input type="submit" value="Calculate" /> -->
         <button type="submit" class="btn btn-primary">Calculate </button>
     </form>
 
     {% if error %}
-    <p style=" color : red">{{ error }}</p>
+    <p style="color : red">{{ error }}</p>
     {% endif %} {% if result %}
     <p style="color : green">{{ result }}</p>
     {% endif %}
